Demo.docx HTML Output

--- a/output/index.html
+++ b/output/index.html
@@ -1,35 +1,135 @@
 <!DOCTYPE html
   SYSTEM "about:legacy-compat">
-<html lang="en-us">
+<html xmlns:dita="http://dita-ot.sourceforge.net">
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta charset="UTF-8">
-      <meta name="copyright" content="(C) Copyright 2024">
-      <meta name="DC.rights.owner" content="(C) Copyright 2024">
-      <meta name="DC.type" content="map">
-      <meta name="DC.format" content="HTML5">
-      <meta name="DC.identifier" content="k7920355">
-      <meta name="DC.language" content="en-us"><link rel="stylesheet" type="text/css" href="commonltr.css"><title>Container Handling Setup - Emhart - TW0444</title></head>
-   <body id="k7920355">
-      <h1 class="title topictitle1">Container Handling Setup - Emhart - TW0444</h1>
-      <nav xmlns:dita="http://dita-ot.sourceforge.net">
-         <ul lang="en-us" class="map">
-            <li class="topicref"><a href="container_handling_setup__emhart__tw0444.html">Container Handling Setup - Emhart - TW0444</a></li>
-            <li class="topicref"><a href="purpose_and_application.html">Purpose and Application</a><ul>
-                  <li class="topicref"><a href="purpose.html">Purpose</a></li>
-                  <li class="topicref"><a href="application.html">Application</a></li>
-               </ul>
-            </li>
-            <li class="topicref"><a href="safety.html">Safety</a></li>
-            <li class="topicref"><a href="instructions.html">instructions.dita</a></li>
-            <li class="topicref"><a href="required_training.html">Required Training</a></li>
-            <li class="topicref"><a href="references.html">References</a><ul>
-                  <li class="topicref"><a href="document_classification.html">Document Classification</a></li>
-               </ul>
-            </li>
-            <li class="topicref"><a href="approval.html">Approval</a></li>
-            <li class="topicref"><a href="revision_history.html">Revision History</a></li>
-         </ul>
-      </nav>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Generated HTML</title><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous"></head>
+   <body>
+      <div id="navbar">
+         <div id="logo-bar"><span onclick="openMenu()" id="menuToggle">☰</span></div>
+         <div id="searchBar"><input id="text-to-search" type="text" placeholder="Type something..."><button id="search-button">🔍</button></div>
+      </div>
+      <div class="container">
+         <div class="row">
+            <html lang="en-us">
+               <head>
+                  <meta charset="UTF-8">
+                  <meta name="copyright" content="(C) Copyright 2024">
+                  <meta name="DC.rights.owner" content="(C) Copyright 2024">
+                  <meta name="DC.type" content="map">
+                  <meta name="DC.format" content="HTML5">
+                  <meta name="DC.identifier" content="p0859021">
+                  <meta name="DC.language" content="en-us"><link rel="stylesheet" type="text/css" href="commonltr.css"><title>Demonstration of DOCX support in calibre</title></head>
+               <body id="p0859021">
+                  <h1 class="title topictitle1">Demonstration of DOCX support in calibre</h1>
+                  <nav>
+                     <ul lang="en-us" class="map">
+                        <li class="topicref"><a href="demonstration_of_docx_support_in_calibre.html">Demonstration of DOCX support in calibre</a></li>
+                        <li class="topicref"><a href="text_formatting.html">Text Formatting</a><ul>
+                              <li class="topicref"><a href="inline_formatting.html">Inline formatting</a></li>
+                              <li class="topicref"><a href="fun_with_fonts.html">Fun with fonts</a></li>
+                              <li class="topicref"><a href="paragraph_level_formatting.html">Paragraph level formatting</a></li>
+                           </ul>
+                        </li>
+                        <li class="topicref"><a href="tables.html">tables.dita</a></li>
+                        <li class="topicref"><a href="structural_elements.html">Structural Elements</a><ul>
+                              <li class="topicref"><a href="footnotes_amp_endnotes.html">Footnotes &amp; Endnotes</a></li>
+                              <li class="topicref"><a href="dropcaps.html">Dropcaps</a></li>
+                              <li class="topicref"><a href="links.html">Links</a></li>
+                              <li class="topicref"><a href="table_of_contents.html">Table of Contents</a></li>
+                           </ul>
+                        </li>
+                        <li class="topicref"><a href="images.html">Images</a></li>
+                        <li class="topicref"><a href="lists.html">Lists</a><ul>
+                              <li class="topicref"><a href="bulleted_list.html">Bulleted List</a></li>
+                              <li class="topicref"><a href="numbered_list.html">Numbered List</a></li>
+                              <li class="topicref"><a href="multilevel_lists.html">Multi-level Lists</a></li>
+                              <li class="topicref"><a href="continued_lists.html">Continued Lists</a></li>
+                           </ul>
+                        </li>
+                     </ul>
+                  </nav>
+               </body>
+            </html>
+         </div>
+      </div>
+      <div class="to-top" onclick="scrollToTop()"><i class="fa-solid fa-arrow-up"></i></div>
+      <div class="footer">
+         <div class="bottom"></div><span class="ftrtxt"></span></div>
    </body>
-</html>
+</html><script xmlns:dita="http://dita-ot.sourceforge.net" src="https://kit.fontawesome.com/a1435abe6f.js" crossorigin="anonymous"></script><script xmlns:dita="http://dita-ot.sourceforge.net">
+      
+            // add toc class in nav tag
+            document.querySelector('nav').classList.add('toc')
+          const expandmenu = document.querySelectorAll(
+            '.container nav[role="toc"] li, .container nav.toc li'
+          );
+          const multiChapetersTopic = []
+          expandmenu.forEach((ele) => {
+            if (checkForChildUnorderedList(ele.childNodes)) multiChapetersTopic.push(ele);
+          });
+          function checkForChildUnorderedList(nodes) {
+            for (const childNode of nodes) {
+              if (childNode.nodeName === "UL") return true;
+            }
+          }
+          addCollapsibleMenu(multiChapetersTopic);
+          function handleCollapse(){
+            event.target.classList.toggle("rotate-dropdown-arrow")
+            event.target.nextElementSibling.nextElementSibling?event.target.nextElementSibling.nextElementSibling.classList.toggle("show-submenu"):event.target.nextElementSibling.classList.toggle("show-submenu")
+          }
+          function openMenu(){
+            const menu = document.querySelector('.container>.row')
+            menu.classList.toggle("hide-menu")
+          }
+          function addCollapsibleMenu(allTopics){
+            allTopics.forEach((topic) => {
+              topic.childNodes[1].classList.add("hide-submenu");
+              const collapseButton = document.createElement("div");
+              collapseButton.classList.add("dropdown-arrow")
+              collapseButton.addEventListener("click", handleCollapse);
+              topic.insertBefore(collapseButton, topic.firstChild);
+            });
+          }
+          window.addEventListener("scroll",()=>{
+            const toTop = document.querySelector(".to-top")
+            if(window.pageYOffset > 100){
+              toTop.classList.add("to-top-visible")
+            }else{
+              toTop.classList.remove("to-top-visible")
+            }
+          })
+          function scrollToTop(){
+            window.scrollTo(0,0)
+          }
+          function addLogo(){
+            const logoDiv = document.querySelector("#logo-bar")
+            const logoImg = document.createElement("img")
+            logoDiv.append(logoImg)
+          }
+          addLogo()
+          //function to handle broken image link in logo
+          function handleBrokenLogo() {
+            const logoImg = document.querySelector('#logo-bar img');
+            logoImg.addEventListener('error',()=>{
+              logoImg.style.display = 'none'
+            })
+          }
+          handleBrokenLogo()
+          function handleIntroTitle(){
+            const grid = document.querySelector('.container .row');
+            const nav = document.querySelector('nav.toc');
+            const h1 = document.querySelector('.container .row>h1');
+            const mainContainer =  document.createElement('main')
+            mainContainer.classList.add('main')
+            grid.append(mainContainer)
+            if(!h1) return
+            // Insert the h1 before the nav element to place it on the right
+            grid.insertBefore(nav,h1);
+            grid.removeChild(h1);
+            mainContainer.append(h1)
+          }
+          handleIntroTitle()
+        
+    </script>
